--- a/style.css
+++ b/style.css
@@ -49,25 +49,65 @@ table {
 
 /* Personal CSS Code */
 
+body {
+    font-family: 'Raleway', 'sans-serif';
+}
+
 img {
     height: 5em;
 }
 
 .main-container {
-    display: grid;
-    grid-template-rows: 1fr 5fr;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    align-items: center;
+    justify-content: center;
+
     gap: 10em;
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 5em;
+}
+
+.header h1 {
+    font-size: 5em;
 }
 
 .game-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3,1fr);
+
+    gap: 1em;
+    padding: 1em;
+
+    background-color: grey;
 }
 
 .game-tile {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: grey;
+    background-color: lightgrey;
+
+    cursor: pointer;
+    
+    padding: 1em;
+}
+
+.game-status {
+    font-size: 3.5em;
+}
+
+.invisible {
+    visibility: hidden;
 }
