--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ table {
 
 body {
     font-family: 'Raleway', 'sans-serif';
+    color: white;
+
+    background-color: #082f49;
 }
 
 img {
@@ -76,10 +79,77 @@ img {
     justify-content: center;
 
     margin-top: 5em;
+    background-color: #082f49;
+
+    border-radius: 1em;
+    box-shadow: 1em 1em 8em 1em #01070aa9;
+
+    padding: 1em;
 }
 
 .header h1 {
-    font-size: 5em;
+    color: #f0f9ff;
+    -webkit-text-stroke: 2px black;
+    font-size: 10em;
+}
+
+.header p {
+    font-size: 3em;
+    -webkit-text-stroke: 1px black;
+}
+
+.dialog-box {
+    color: black;
+    background-color: rgb(240, 249, 255,0.5);
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transition: all 2s ease-in-out;
+    z-index: -1;
+
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+
+    gap: 1em;
+
+
+    text-align: center;
+}
+
+.open {
+    opacity: 1;
+    z-index: 999;
+}
+
+.content-area {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+
+    background-color: rgba(245, 245, 245, 0.8);
+
+    padding: 15em;
+    gap: 2em;
+}
+
+.content-area h1 {
+    font-size: 3em;
+    -webkit-text-stroke: 1px black;
+}
+
+.name-form {
+    display: flex;
+    gap: 1em;
+    align-items: center;
+    justify-content: center;
 }
 
 .game-container {
@@ -90,18 +160,26 @@ img {
     gap: 1em;
     padding: 1em;
 
-    background-color: grey;
+    border-radius: 1em;
+
+    background-color: #26343de7;
 }
 
 .game-tile {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: lightgrey;
+    background-color: whitesmoke;
+
+    border-radius: 1em;
 
     cursor: pointer;
     
     padding: 1em;
+}
+
+.game-tile img {
+    filter: hue-rotate(180deg);
 }
 
 .game-status {
